fix: toolbar overlaps annotation

--- a/packages/pyroscope-flamegraph/src/Toolbar.module.scss
+++ b/packages/pyroscope-flamegraph/src/Toolbar.module.scss
@@ -11,7 +11,6 @@ $buttonHeight: 37px;
   border: 1px solid var(--ps-ui-border);
   padding: 4px;
   align-items: center;
-  z-index: 2;
 }
 
 .viewType {
